[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Game/Character/Movement.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Game/Character/Kanto_Character.tscn" type="PackedScene" id=2]

[node name="Character" type="Spatial"]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="Lane0" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 0 )

[node name="Lane1" type="Spatial" parent="."]

[node name="Lane2" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 0 )
